# zec2eth

./: .gitignore
backend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: index.ts
backend/src/config/: index.ts  logger.ts
backend/src/routes/: health.ts  index.ts  transactions.ts
backend/src/services/: index.ts  store.ts
backend/src/types/: index.ts
backend/src/utils/: index.ts
circuits/scripts/: 2_ceremony.sh  3_setup-groth16.sh  4_prove.sh  ceremony.sh  compile.sh  setup-groth16.sh  verify.sh
circuits/src/: config.circom  main.circom  zecBurn.circom
circuits/src/primitives/hash/: double_sha256.circom  poseidon_bytes.circom
circuits/src/primitives/merkle/: merkle_path.circom  sha256_concat.circom
circuits/src/primitives/utils/: bytes_rangecheck.circom  isNonZero.circom  packAddress.circom  packBytesToField.circom
cofhe-hardhat-starter/: hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
cofhe-hardhat-starter/contracts/: Verifier.sol  ZecBridge.sol
cofhe-hardhat-starter/contracts/token/: FHERC20.sol  FHERC20UnwrapClaim.sol  FHERC20Wrapper.sol  FHZEC.sol
cofhe-hardhat-starter/contracts/token/interfaces/: IFHERC20.sol  IFHERC20Errors.sol  IFHERC20Permit.sol  IFHERC20Receiver.sol
cofhe-hardhat-starter/contracts/token/utils/: FHERC20Utils.sol
cofhe-hardhat-starter/deploy/: deployBridge.ts  deployFHZEC.ts  deployVerifier.ts
cofhe-hardhat-starter/tasks/: index.ts
cofhe-hardhat-starter/tasks/FHERC20/: balanceOf.ts  encTransferFrom.ts  index.ts  isOperator.ts  setOperator.ts
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  Header.tsx  StepIndicator.tsx
frontend/components/bridge/: AmountInput.tsx  BridgeFlow.tsx  BurnAddress.tsx  ConnectWallet.tsx  ProofGeneration.tsx  SubmitTransaction.tsx  SuccessScreen.tsx  WaitingForTx.tsx  index.ts
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  spinner.tsx
frontend/config/: providers.tsx  wagmi.ts
frontend/hooks/: index.ts  useFhe.ts
frontend/lib/: api.ts  constants.ts  contracts.ts  fhe.ts  prover.ts  store.ts  types.ts  utils.ts  witness.ts
watcher/: Cargo.toml
watcher/src/: main.rs  main2.rs
