[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
zcash_client_backend = {  git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic", "lightwalletd-tonic-transport", "orchard"] }
zcash_client_memory = { git ="https://github.com/zcash/librustzcash.git" , rev = "9f47de6", features = ["transparent-inputs"] }
zcash_client_sqlite = { git ="https://github.com/zcash/librustzcash.git" , rev = "9f47de6", features = ["transparent-inputs", "unstable"] }
zcash_primitives = "0.26"

zcash_protocol = "0.7"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
anyhow = "1"
hex = "0.4"
dotenv = "0.15"
rusqlite = { version = "0.37", features = ["bundled"] }
dotenvy = "0.15"

# CSPRNG
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_distr = { version = "0.4", default-features = false }